# pouch

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  LICENSE.md  MODULE.bazel  README.md  WORKSPACE.bazel  go.mod  go.sum
.github/: CODE_OF_CONDUCT.md
.github/workflows/: merge.yml  pr.yaml
bzlmods/: go.MODULE.bazel  oci.MODULE.bazel
cli/: BUILD.bazel  Cargo.toml  main.go
cli/cmd/: BUILD.bazel  connect.go  genkeypair.go  genseed.go  root.go
cli/dialer/: BUILD.bazel  tcp.go
cli/src/: main.rs
docs/: _config.yml  docusaurus.config.ts  package-lock.json
docs/_posts/: 2024-08-24-welcome-to-jekyll.markdown
docs/docs/datatypes/: _category_.json  lists.md  sets.md  strings.md
docs/docs/getting-started/: build.md
docs/src/components/HomepageFeatures/: index.tsx
rules/: BUILD.bazel  go.bzl  oci.bzl
sdk/: Cargo.toml
sdk/auth/: BUILD.bazel  auth.go  challenge.go
sdk/commands/: BUILD.bazel  auth.go  client.go  command.go  common.go  errors.go  join.go  lists.go  log.go  response.go  server.go  sets.go  strings.go
sdk/logging/: BUILD.bazel  logging.go
sdk/pouchkey/: BUILD.bazel  pouchkey.go  pouchkey_test.go
sdk/src/: command.rs  lib.rs  response.rs
server/: BUILD.bazel  Cargo.toml  main.go
server/bbolt/: BUILD.bazel  bbolt.go  utils.go
server/datatypes/: BUILD.bazel  bloom_filter.go  bloom_filter_test.go  hyperloglog.go  hyperloglog_test.go  list.go  list_test.go  set.go  set_test.go  sorted_set.go  sorted_set_test.go  string.go  tdigest_test.go  type.go
server/env/: BUILD.bazel  variables.go
server/handlers/: BUILD.bazel  net.go  quic.go  tcp.go  utils.go  ws.go
server/peering/: BUILD.bazel  udp.go
server/src/: command.rs  main.rs  response.rs  wal.rs
server/src/handlers/: mod.rs  swarm.rs  tcp.rs  ws.rs
server/src/p2p/: behaviour.rs  mod.rs
server/src/processor/: db.rs  lists.rs  mod.rs  sets.rs  sorted_sets.rs  spec.rs  strings.rs
server/src/structures/: bloom_filter.rs  cuckoo_filter.rs  mod.rs  sorted_set.rs
server/store/: BUILD.bazel  bbolt.go  config.go  hyperloglog.go  lists.go  node.go  peer_join.go  service.go  sets.go  snap_shot.go  store.go  utils.go
src/: command.rs  db.rs  main.rs  processor.rs  response.rs  wal.rs
src/processor/: db.rs  lists.rs  mod.rs  sets.rs  sorted_sets.rs  spec.rs  strings.rs
src/structures/: sorted_set.rs
