[workspace]
members = ["server", "cli", "sdk"]
resolver = "2"

[workspace.package]
version = "0.1.1"
license-file = "LICENSE.md"
repository = "https://github.com/c16a/pouch"
homepage = "https://github.com/c16a/pouch"
keywords = ["kv", "database"]
readme = "README.md"
edition = "2021"

[profile.release]
lto = true
debug = "none"
overflow-checks = true
opt-level = 3
strip = "symbols"
debug-assertions = false