module(name = "pouch")

bazel_dep(name = "rules_go", version = "0.49.0")
bazel_dep(name = "gazelle", version = "0.38.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_oci", version = "2.0.0-beta0")

include("//:bzlmods/oci.MODULE.bazel")

include("//:bzlmods/go.MODULE.bazel")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "mozilla_cert_pem",
    downloaded_file_path = "cacert.pem",
    sha256 = "1bf458412568e134a4514f5e170a328d11091e071c7110955c9884ed87972ac9",
    url = "https://curl.se/ca/cacert.pem",
)
