go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_hashicorp_raft",
    "com_github_hashicorp_raft_boltdb_v2",
    "com_github_google_uuid",
    "com_github_gorilla_websocket",
)
