go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_hashicorp_raft",
    "com_github_hashicorp_go_msgpack_v2",
    "io_etcd_go_bbolt",
    "com_github_google_uuid",
    "com_github_gorilla_websocket",
    "com_github_quic_go_quic_go",
    "com_github_cloudflare_circl",
    "com_github_spf13_cobra",
)
