[package]
name = "pouch-cli"
description = "A really tiny cli for pouch-server"
version.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true

[dependencies]
tokio = { version = "1.39.2", default-features = false, features = ["tokio-macros", "net", "rt-multi-thread", "macros", "io-util", "io-std"] }
