[package]
name = "pouch-sdk"
description = "The SDK to interact with pouch-server"
version.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true

[dependencies]
serde = { version = "1.0.205", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.122", default-features = false, features = ["alloc"] }