[package]
name = "pouch-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["kv", "database"]
repository = "https://github.com/c16a/pouch"
homepage = "https://github.com/c16a/pouch"
description = "A really tiny KV store"
readme = "../README.md"

[dependencies]
dashmap = { version = "6.0.1" }
rand = "0.8.5"
serde = { version = "1.0.204", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.122", default-features = false, features = ["alloc"] }
tokio = { version = "1.39.2", default-features = false, features = ["tokio-macros", "net", "rt-multi-thread", "sync", "macros", "io-util"] }

