[package]
name = "pouch-server"
description = "A really tiny KV store"
version.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true

[dependencies]
dashmap = { version = "6.0.1" }
rand = "0.8.5"
serde = { version = "1.0.205", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.122", default-features = false, features = ["alloc"] }
tokio = { version = "1.39.2", default-features = false, features = ["tokio-macros", "net", "rt-multi-thread", "sync", "macros", "io-util"] }
pouch-sdk = { path = "../sdk", version = "0.3.0" }
tokio-tungstenite = "0.23.1"
futures-util = "0.3.30"
libp2p = { version = "0.54.0", features = ["async-std", "dns", "kad", "mdns", "noise", "macros", "tcp", "yamux"] }
async-std = "1.12.0"
futures = "0.3.30"
