load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dialer",
    srcs = ["tcp.go"],
    importpath = "github.com/c16a/pouch/cli/dialer",
    visibility = ["//visibility:public"],
    deps = [
        "//sdk/commands",
        "//sdk/pouchkey",
    ],
)

go_test(
    name = "test",
    embed = [":dialer"],
)
