load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "auth",
    srcs = [
        "auth.go",
        "challenge.go",
    ],
    importpath = "github.com/c16a/pouch/sdk/auth",
    visibility = ["//visibility:public"],
    deps = [
        "//sdk/commands",
        "//sdk/pouchkey",
        "//server/store",
    ],
)

go_test(
    name = "test",
    embed = [":auth"],
)
