load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "commands",
    srcs = [
        "command.go",
        "common.go",
        "join.go",
        "lists.go",
        "response.go",
        "sets.go",
        "strings.go",
    ],
    importpath = "github.com/c16a/pouch/sdk/commands",
    visibility = ["//visibility:public"],
)
