load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "commands",
    srcs = [
        "client.go",
        "command.go",
        "errors.go",
        "server.go",
    ],
    importpath = "github.com/c16a/pouch/sdk/commands",
    visibility = ["//visibility:public"],
)

go_test(
    name = "test",
    embed = [":commands"],
)
