load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "store",
    srcs = [
        "lists.go",
        "node.go",
        "peer_join.go",
        "sets.go",
        "snap_shot.go",
        "store.go",
    ],
    importpath = "github.com/c16a/pouch/server/store",
    visibility = ["//visibility:public"],
    deps = [
        "//sdk/commands",
        "//server/datatypes",
        "//server/env",
        "@com_github_google_uuid//:uuid",
        "@com_github_hashicorp_raft//:raft",
        "@com_github_hashicorp_raft_boltdb_v2//:raft-boltdb",
    ],
)
