load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "store",
    srcs = [
        "config.go",
        "hyperloglog.go",
        "lists.go",
        "node.go",
        "peer_join.go",
        "sets.go",
        "snap_shot.go",
        "store.go",
    ],
    importpath = "github.com/c16a/pouch/server/store",
    visibility = ["//visibility:public"],
    deps = [
        "//sdk/commands",
        "//server/bbolt",
        "//server/datatypes",
        "@com_github_google_uuid//:uuid",
        "@com_github_hashicorp_raft//:raft",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapio",
    ],
)

go_test(
    name = "test",
    embed = [":store"],
)
